package tn.intervenIA.intervenIA.domain.model;

public enum Zone {
    NORTH,
    SOUTH,
    CENTER
}
