package tn.intervenIA.intervenIA.domain.model.equipment;

public enum EquipmentStatus {
    OPERATIONAL,
    OUT_OF_SERVICE,
    UNDER_REPAIR,
    IN_VERIFICATION,
    BROKEN
}
