package tn.intervenIA.intervenIA.domain.model.incident;

public enum IncidentStatus {
    PENDING,
    SCHEDULED,
    ASSIGNED,
    IN_PROGRESS,
    COMPLETED,
    REQUIRES_MANUAL_REVIEW
}
