package tn.intervenIA.intervenIA.domain.model.incident;

public enum UrgencyLevel {
    LOW,
    MEDIUM,
    HIGH,
    CRITICAL
}
