package tn.intervenIA.intervenIA.domain.model.planning;

public enum PlanningStatus {
    SCHEDULED ,
    IN_PROGRESS ,
    COMPLETED ,
    CANCELLED
}
