package tn.intervenIA.intervenIA.domain.model.user;

public enum Role {
    CITIZEN,
    TECHNICIAN,
    LEADER,
    MANAGER,
    ADMIN,
    SUPER_ADMIN
}
